--- a/functions/package.json
+++ b/functions/package.json
@@ -12,8 +12,23 @@
     "node": "8"
   },
   "dependencies": {
-    "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.3.0"
+    "@sendgrid/mail": "^6.4.0",
+    "apexcharts": "^3.8.4",
+    "cors": "^2.8.5",
+    "custom-env": "^1.0.2",
+    "dayjs": "^1.8.15",
+    "express": "^4.17.1",
+    "firebase-admin": "^8.2.0",
+    "firebase-functions": "^3.0.2",
+    "generate-password": "^1.4.2",
+    "jsonwebtoken": "^8.5.1",
+    "mailgun-js": "^0.22.0",
+    "nodemailer": "^6.3.0",
+    "nodemailer-mailgun-transport": "^1.4.0",
+    "numeral": "^2.0.6",
+    "qrcode": "^1.4.0",
+    "swagger-jsdoc": "^3.2.9",
+    "swagger-ui-express": "^4.0.7"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
