--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.0",
+    "firebase": "^7.13.0",
+    "firebase-admin": "^8.10.0",
+    "firebase-functions": "^3.0.2",
+    "http2": "^3.3.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
