--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.0.2",
     "http2": "^3.3.7",
+    "material-table": "^1.57.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
